# Bookstore-2021

./: CMakeLists.txt  README.md  clean.sh  run_testcase7_8.py  关于块状链表的一些Hint.md
Data/AdvancedDataSet/: gen.py
Data/AdvancedDataSet/testcase1/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
Data/AdvancedDataSet/testcase2/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
Data/AdvancedDataSet/testcase3/: 1.in  1.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out
Data/AdvancedDataSet/testcase4/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
Data/AdvancedDataSet/testcase5/: 1.in  1.out  10.in  10.out  2.in  2.out  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
Data/BasicDataSet/: testcase1.txt  testcase2.txt  testcase3.txt  testcase4.txt  testcase4_ans.txt  testcase5.txt  testcase5_ans.txt  testcase6.txt  testcase6_ans.txt
Data/BasicDataSet/testcase7/: 1.txt  2.txt  3.txt  ans.txt
Data/BasicDataSet/testcase8/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  (+82 more)
Data/RobustDataSet/: testcase1.in  testcase1.out  testcase2.in  testcase2.out  testcase3.in  testcase3.out  testcase4.in  testcase4.out  testcase5.in  testcase5.out
Document/: Tips.md  hint.md
src/: main.cpp
(+105 files in other folders)
